<resources>
    <string name="app_name">HockeyNite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HockeyNite</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_match_1">Match 1</string>
    <string name="menu_match_2">Match 2</string>
    <string name="menu_tools">Paramètres</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Paris</string>
    <string name="saved_ip">192.168.43.174</string>
    <string name="saved_pBet">9001</string>
    <string name="saved_pMatch">9002</string>
</resources>
