<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.brosseau.julien.tp1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_match_1"
        android:name="com.brosseau.julien.tp1.ui.match_1.Match1Fragment"
        android:label="@string/menu_match_1"
        tools:layout="@layout/fragment_match_1" />

    <fragment
        android:id="@+id/nav_match_2"
        android:name="com.brosseau.julien.tp1.ui.match_2.Match2Fragment"
        android:label="@string/menu_match_2"
        tools:layout="@layout/fragment_match_2" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.brosseau.julien.tp1.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.brosseau.julien.tp1.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.brosseau.julien.tp1.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>